echo code for w11

--- a/w11/index.qmd
+++ b/w11/index.qmd
@@ -16,6 +16,7 @@ format:
     footer: "DSAN 5100-03 W10: Parameter Estimation"
     output-file: slides.html
     df-print: kable
+    echo: true
     code-fold: true
     html-math-method: mathjax
     scrollable: true
